--- a/index.html
+++ b/index.html
@@ -16,24 +16,36 @@
             </div>
 
             <ul id="listaheader">
-                <li><a href="#0">Introduccion</a></li>
-                <li><a href="#0">Tareas</a></li>
+                <li><a href="#Introduccion">Introduccion</a></li>
                 <li><a href="#0">Equipo</a></li>
+                <li><a href="#0">Tareas</a></li>
             </ul>
         </header>
 
-        <div id="textInt">
-            <body>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero
-                commodi suscipit enim quas eos similique, excepturi possimus
-                vitae distinctio rem ad perferendis praesentium deleniti
-                delectus dolorem repellat libero eligendi nulla.
-                Eaque dolor nostrum dicta architecto eius iure necessitatibus
-                expedita ipsam! Officiis praesentium temporibus odio culpa.
-                Deserunt nostrum, sit enim perspiciatis veritatis consequatur
-                praesentium ex iste corrupti labore dolor laboriosam
-                perferendis.</body>
+        <div class="rectext" id="introduccion">
+            <div class="textInt">
+                <center><br><img id="imgfcc"
+                        src="https://secreacademica.cs.buap.mx/images/logo_FCC.png"><br><br>
+                    <body>Esta es la pagina principal de tareas del equipo #? de
+                        la materia de Desarrollo de Aplicaciones Web de la
+                        Universidad Autonoma de Puebla.</body><br>
+                    <ul>
+                        <li><a>NRC:23310</a></li><br>
+                        <li><a>Horario: 11:00-12:59</a></li><br>
+                        <li><a>Profesor: Pedro Bello Lopez</a></li><br>
+                    </ul>
+                </center>
+            </div>
         </div>
-
     </body>
+    <body>
+        <div class="rectext" id="Equipo">
+            <body>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Accusamus alias ratione corporis sint sapiente, mollitia ex quae
+                architecto natus suscipit, ducimus quisquam facilis vel
+                quibusdam dolorum dolorem? Expedita, aspernatur aliquid!</body>
+        </div>
+    </body>
+        
 
 </html>
