--- a/index.html
+++ b/index.html
@@ -17,35 +17,97 @@
 
             <ul id="listaheader">
                 <li><a href="#Introduccion">Introduccion</a></li>
-                <li><a href="#0">Equipo</a></li>
-                <li><a href="#0">Tareas</a></li>
+                <li><a href="#Equipo">Equipo</a></li>
+                <li><a href="#Tareas">Tareas</a></li>
             </ul>
         </header>
 
-        <div class="rectext" id="introduccion">
+        <div class="rectext">
             <div class="textInt">
                 <center><br><img id="imgfcc"
                         src="https://secreacademica.cs.buap.mx/images/logo_FCC.png"><br><br>
-                    <body>Esta es la pagina principal de tareas del equipo #? de
+                    <p id="introduccion">Esta es la pagina principal de tareas
+                        del equipo #? de
                         la materia de Desarrollo de Aplicaciones Web de la
-                        Universidad Autonoma de Puebla.</body><br>
+                        Universidad Autonoma de Puebla.</p><br>
                     <ul>
                         <li><a>NRC:23310</a></li><br>
                         <li><a>Horario: 11:00-12:59</a></li><br>
                         <li><a>Profesor: Pedro Bello Lopez</a></li><br>
                     </ul>
+                    <br>
+                    <h2>Integrantes del Equipo</h2>
+
+
+                    <div class="container" id="Equipo">
+                        <div class="alumn">
+                            <br><img src="/recursos/LuisBello.jpeg">
+                            <p>Luis Bello Toledo</p>
+                            <p>202029063</p>
+                            <p>3er Semestre</p>
+                            <br>
+                        </div>
+                        <div class="alumn">
+                            <br><img src="/recursos/FatimaNora.jpeg">
+                            <p>Fatima Nora Torres Flores</p>
+                            <p>202092411</p>
+                            <p>3er Semestre</p>
+                            <br>
+                        </div>
+                        <div class="alumn">
+                            <br><img src="/recursos/RodrigoOrtega.jpg">
+                            <p>Rodrigo Ortega Tableros</p>
+                            <p>201905150</p>
+                            <p>6to Semestre</p>
+                            <br>
+                        </div>
+                        <div class="alumn">
+                            <br><img src="/recursos/EriedTello.jpeg">
+                            <p>Eried Tello González</p>
+                            <p>201867120</p>
+                            <br>
+                        </div>
+                    </div>
+
+                    <h2>Tareas</h2>
+                    <div class="tabla" id="Tareas">
+                        <table>
+                            <!--Cabecera de tabla-->
+                            <tr>
+                                <th>Num. Actividad</th>
+                                <th>Nombre</th>
+                                <th>Descripcion</th>
+                                <th>Archivo</th>
+                            </tr>
+                            <!--Tarea 1-->
+                            <tr>
+                                <td>Actividad 1</td>
+                                <td>Pagina HTML</td>
+                                <td>Como primera actividad del curso en equipo
+                                    se nos pidio realizar una pagina HTML y la
+                                    tendremos que hostear en algun lugar para
+                                    poder ahi subir nuestras tareas realizadas
+                                    durante el curso.</td>
+                                <td>OrtegaTabler</td>
+                            </tr>
+                            <!--Tarea 2-->
+                            <tr>
+                                <td>Actividad 2</td>
+                                <td>Investigacion de Servidores Web</td>
+                                <td>En esta actividad se realizo la investigacion sobre los distintos servidores web que mas se utilizan en la red</td>
+                                <a href="recursos/Tipos de servidores.pdf"><td>TiposServidores.pdf</td></a>
+                            </tr>
+                        </table>
+                    </div>
                 </center>
             </div>
         </div>
+
+
+
     </body>
-    <body>
-        <div class="rectext" id="Equipo">
-            <body>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Accusamus alias ratione corporis sint sapiente, mollitia ex quae
-                architecto natus suscipit, ducimus quisquam facilis vel
-                quibusdam dolorum dolorem? Expedita, aspernatur aliquid!</body>
-        </div>
-    </body>
-        
+
+
+
 
 </html>
