--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                                 <td>Actividad 2</td>
                                 <td>Investigacion de Servidores Web</td>
                                 <td>En esta actividad se realizo la investigacion sobre los distintos servidores web que mas se utilizan en la red</td>
-                                <a href="recursos/Tipos de servidores.pdf"><td>TiposServidores.pdf</td></a>
+                                <td><a href="Tiposdeservidores.pdf" target="blank">TiposServidores.pdf</a></td>
                             </tr>
                         </table>
                     </div>
