--- a/index.html
+++ b/index.html
@@ -41,28 +41,28 @@
 
                     <div class="container" id="Equipo">
                         <div class="alumn">
-                            <br><img src="/recursos/LuisBello.jpeg">
+                            <br><img src="recursos/LuisBello.jpeg">
                             <p>Luis Bello Toledo</p>
                             <p>202029063</p>
                             <p>3er Semestre</p>
                             <br>
                         </div>
                         <div class="alumn">
-                            <br><img src="/recursos/FatimaNora.jpeg">
+                            <br><img src="recursos/FatimaNora.jpeg">
                             <p>Fatima Nora Torres Flores</p>
                             <p>202092411</p>
                             <p>3er Semestre</p>
                             <br>
                         </div>
                         <div class="alumn">
-                            <br><img src="/recursos/RodrigoOrtega.jpg">
+                            <br><img src="recursos/RodrigoOrtega.jpg">
                             <p>Rodrigo Ortega Tableros</p>
                             <p>201905150</p>
                             <p>6to Semestre</p>
                             <br>
                         </div>
                         <div class="alumn">
-                            <br><img src="/recursos/EriedTello.jpeg">
+                            <br><img src="recursos/EriedTello.jpeg">
                             <p>Eried Tello González</p>
                             <p>201867120</p>
                             <br>
