--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                                     tendremos que hostear en algun lugar para
                                     poder ahi subir nuestras tareas realizadas
                                     durante el curso.</td>
-                                <td>OrtegaTabler</td>
+                                <td><a href="Practica1CreacionPaginaWeb.pdf" target="blank">CreacionPaginaWeb.pdf</a></td>
                             </tr>
                             <!--Tarea 2-->
                             <tr>
