--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
                             <p>Luis Bello Toledo</p>
                             <p>202029063</p>
                             <p>3er Semestre</p>
+                            <p>pedro.bello@correo.buap.mx</p>
                             <br>
                         </div>
                         <div class="alumn">
@@ -52,6 +53,7 @@
                             <p>Fatima Nora Torres Flores</p>
                             <p>202092411</p>
                             <p>3er Semestre</p>
+                            <p>torresfloresfatima3@gmail.com</p>
                             <br>
                         </div>
                         <div class="alumn">
@@ -59,12 +61,22 @@
                             <p>Rodrigo Ortega Tableros</p>
                             <p>201905150</p>
                             <p>6to Semestre</p>
+                            <p>rodrigo.ortegat@alumno.buap.mx</p>
                             <br>
                         </div>
                         <div class="alumn">
                             <br><img src="recursos/EriedTello.jpeg">
                             <p>Eried Tello González</p>
                             <p>201867120</p>
+                            <p>Eried.tellog@alumno.buap.mx</p>
+                            <br>
+                        </div>
+                        <div class="alumn">
+                            <br><img src="recursos/MeredithMadai.jpeg">
+                            <p>Meredith Madai Moreno Ortega</p>
+                            <p>201940745</p>
+                            <p>6to Semestre</p>
+                            <p>meredithmadai@gmail.com</p>
                             <br>
                         </div>
                     </div>
@@ -102,12 +114,5 @@
                 </center>
             </div>
         </div>
-
-
-
     </body>
-
-
-
-
 </html>
