--- a/index.html
+++ b/index.html
@@ -109,6 +109,13 @@
                                 <td>En esta actividad se realizo la investigacion sobre los distintos servidores web que mas se utilizan en la red</td>
                                 <td><a href="Tiposdeservidores.pdf" target="blank">TiposServidores.pdf</a></td>
                             </tr>
+                            <!--Tarea 3-->
+                            <tr>
+                                <td>Actividad 3</td>
+                                <td>WAMPSERVER</td>
+                                <td>Instalacion y prueba del programa WAMPSERVER con programa PHP de ciclo.</td>
+                                <td><a href="WAMPSERVER.pdf" target="blank">WAMPSERVER.pdf</a></td>
+                            </tr>
                         </table>
                     </div>
                 </center>
