--- a/index.html
+++ b/index.html
@@ -116,6 +116,13 @@
                                 <td>Instalacion y prueba del programa WAMPSERVER con programa PHP de ciclo.</td>
                                 <td><a href="WAMPSERVER.pdf" target="blank">WAMPSERVER.pdf</a></td>
                             </tr>
+                            <!--Tarea 3-->
+                            <tr>
+                                <td>Actividad 4</td>
+                                <td>Programa de Registro y Conteo de Votos</td>
+                                <td>En esta practica se realizaron programas php conectados para poder hacer el registro de votos e incluso el conteo de los mismo por medio de un archivo de texto que el mismo programa realiza.</td>
+                                <td><a href="RegistroConteoVotos.pdf" target="blank">RegistroConteoVotos.pdf</a></td>
+                            </tr>
                         </table>
                     </div>
                 </center>
