--- a/index.html
+++ b/index.html
@@ -49,14 +49,6 @@
                             <br>
                         </div>
                         <div class="alumn">
-                            <br><img src="recursos/FatimaNora.jpeg">
-                            <p>Fatima Nora Torres Flores</p>
-                            <p>202092411</p>
-                            <p>3er Semestre</p>
-                            <p>torresfloresfatima3@gmail.com</p>
-                            <br>
-                        </div>
-                        <div class="alumn">
                             <br><img src="recursos/RodrigoOrtega.jpg">
                             <p>Rodrigo Ortega Tableros</p>
                             <p>201905150</p>
@@ -129,6 +121,13 @@
                                 <td>Programa Operacion de Conjuntos</td>
                                 <td>Este programa realiza distintas operaciones con conjuntos.</td>
                                 <td><a href="Conjuntos.pdf" target="blank">Conjuntos.pdf</a></td>
+                            </tr>
+                            <!--Tarea 6-->
+                            <tr>
+                                <td>Actividad 6</td>
+                                <td>Base de Datos Votos</td>
+                                <td>En esta practica modificamos nuestro programa de votantes y le aumentamos el uso del sql.</td>
+                                <td><a href="BasedeDatos.pdf" target="blank">BasedeDatos.pdf</a></td>
                             </tr>
                         </table>
                     </div>
