--- a/index.html
+++ b/index.html
@@ -129,6 +129,13 @@
                                 <td>En esta practica modificamos nuestro programa de votantes y le aumentamos el uso del sql.</td>
                                 <td><a href="BasedeDatos.pdf" target="blank">BasedeDatos.pdf</a></td>
                             </tr>
+                            <!--Tarea 8-->
+                            <tr>
+                                <td>Actividad 8</td>
+                                <td>Proyecto Final Parte 1</td>
+                                <td>Se hizo una investigacion a fondo para poder hacer y darle forma a nuestro proyecto final haciendo diagrama de uso para tener una ba.</td>
+                                <td><a href="ProyectoFinalParte1.pdf" target="blank">ProyectoFinalParte1.pdf</a></td>
+                            </tr>
                         </table>
                     </div>
                 </center>
