--- a/index.html
+++ b/index.html
@@ -136,6 +136,13 @@
                                 <td>Se hizo una investigacion a fondo para poder hacer y darle forma a nuestro proyecto final haciendo diagrama de uso para tener una ba.</td>
                                 <td><a href="ProyectoFinalParte1.pdf" target="blank">ProyectoFinalParte1.pdf</a></td>
                             </tr>
+                            <!--Tarea 9-->
+                            <tr>
+                                <td>Actividad 8</td>
+                                <td>Parte Rentas pagina Videoteca</td>
+                                <td>Se hizo una pagina de rentas con todo y el sistema para opoder tener en funcionamiento nuesta pagina de clientes de la Videoteca.</td>
+                                <td><a href="RENTAS.pdf" target="blank">RENTAS.pdf</a></td>
+                            </tr>
                         </table>
                     </div>
                 </center>
