--- a/index.html
+++ b/index.html
@@ -143,6 +143,13 @@
                                 <td>Se hizo una pagina de rentas con todo y el sistema para opoder tener en funcionamiento nuesta pagina de clientes de la Videoteca.</td>
                                 <td><a href="RENTAS.pdf" target="blank">RENTAS.pdf</a></td>
                             </tr>
+                            <!--Tarea 10-->
+                            <tr>
+                                <td>Actividad 10</td>
+                                <td>2da Parte Proyecto Final</td>
+                                <td>Se hizo avance en la pagina del proyecto Final</td>
+                                <td><a href="2da Parte Proyecto Final.pdf" target="blank">2da Parte Proyecto Final.pdf</a></td>
+                            </tr>
                         </table>
                     </div>
                 </center>
