--- a/index.html
+++ b/index.html
@@ -150,6 +150,13 @@
                                 <td>Se hizo avance en la pagina del proyecto Final</td>
                                 <td><a href="2da Parte Proyecto Final.pdf" target="blank">2da Parte Proyecto Final.pdf</a></td>
                             </tr>
+                            <!--Tarea 11-->
+                            <tr>
+                                <td>Proyecto Final</td>
+                                <td>Proyecto Final</td>
+                                <td>Entrega de documento Proyecto Final</td>
+                                <td><a href="Proyecto Final.pdf" target="blank">Proyecto Final.pdf</a></td>
+                            </tr>
                         </table>
                     </div>
                 </center>
